# lorax

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  Cargo.toml  Dockerfile  Dockerfile-vllm-only  Dockerfile.amd  Dockerfile.amd_dev  Dockerfile.amd_fast  Dockerfile.dev  Makefile  README.md  assert_ner_out.py  benchmark_ner.py  benchmark_ner_staging.py  build.sh  container-entrypoint.sh  debug_rm.py  index.html  lorax_deployment_playbook.md  mkdocs.yml  query.py  run-exec.sh  rust-toolchain.toml  sagemaker-entrypoint.sh  start_ssh.sh  sync.sh  sync_from_s3.sh  test_adapter.py  test_triton_lora.py
clients/python/: .gitignore  Makefile  README.md  pyproject.toml
clients/python/lorax/: __init__.py  client.py  errors.py  inference_api.py  types.py
clients/python/tests/: conftest.py  test_client.py  test_errors.py  test_inference_api.py  test_types.py
docs/: CNAME  (+3 more)
launcher/: Cargo.toml
launcher/src/: main.rs
router/: Cargo.toml  README.md
router/client/: Cargo.toml
router/client/src/: client.rs  lib.rs  sharded_client.rs
router/grpc-metadata/src/: lib.rs
router/src/: adapter.rs  adapter_manager.rs  batch.rs  block_allocator.rs  config.rs  health.rs  infer.rs  lib.rs  loader.rs  main.rs  queue.rs  radix.rs  scheduler.rs  server.rs  tool_grammar.rs  validation.rs
server/: .gitignore  Makefile  Makefile-awq  Makefile-eetq  Makefile-flash-att  Makefile-flash-att-v2  Makefile-marlin  Makefile-megablocks  Makefile-punica  Makefile-vllm  README.md  pyproject.toml  requirements.txt  requirements_rocm.txt
server/aqlm_kernels/: MANIFEST.in  setup.cfg
server/aqlm_kernels/src/aqlm/: __init__.py  inference.py  utils.py
server/awq_kernels/: setup.py
server/awq_kernels/awq_cuda/: pybind_awq.cpp  pybind_ft.cpp
server/awq_kernels/awq_cuda/attention/: decoder_masked_multihead_attention.cu
server/awq_kernels/awq_cuda/layernorm/: reduction.cuh
server/awq_kernels/awq_cuda/quantization/: gemm_cuda.h  gemm_cuda_gen.cu  gemv_cuda.cu
server/exllamav2_kernels/: setup.py
server/exllamav2_kernels/exllamav2_kernels/: ext.cpp
server/exllamav2_kernels/exllamav2_kernels/cuda/: q_gemm.cu  q_gemm_kernel.cuh
server/layers/: __init__.py  conv.py  hqq.py  layernorm.py  linear.py  rotary.py  speculative.py  tensor_parallel.py
server/layers/awq/quantize/: qmodule.py
server/layers/gptq/: __init__.py  exllama.py  exllamav2.py
server/lorax_server/: cache.py  cli.py  interceptor.py  query.py  server.py  test_embedding_pb.py  tracing.py
server/lorax_server/adapters/: __init__.py  config.py  lora.py  medusa.py  medusa_lora.py  types.py  utils.py  weights.py
server/lorax_server/batch/: __init__.py
server/lorax_server/layers/: __init__.py  bnb.py  conv.py  fp8.py  hqq.py  layernorm.py  linear.py  rotary.py  speculative.py  tensor_parallel.py
server/lorax_server/layers/awq/: conversion_utils.py
server/lorax_server/layers/gptq/: __init__.py  custom_autotune.py  exllama.py  exllamav2.py  quant_linear.py  quantize.py
server/lorax_server/models/: __init__.py  bloom.py  cache_manager.py  causal_lm.py  flash_bert.py  flash_causal_lm.py  flash_cohere.py  flash_dbrx.py  flash_distilbert.py  flash_exaone.py  flash_gemma.py  flash_gemma2.py  flash_gpt2.py  flash_granite.py  flash_llama.py  flash_mistral.py  flash_mixtral.py  flash_neox.py  flash_phi.py  flash_phi3.py  flash_qwen.py  flash_qwen2.py  flash_roberta.py  flash_rw.py  flash_santacoder.py  flash_solar.py  galactica.py  gpt_neox.py  metadata_kernels.py  mllama.py  model.py  mpt.py  multimodal_causal_lm.py  opt.py  rw.py  santacoder.py  seq2seq_lm.py  t5.py  types.py  vlm_causal_lm.py
server/lorax_server/models/custom_modeling/: bloom_modeling.py  clip.py  flash_bert_modeling.py  flash_cohere_modeling.py  flash_dbrx_modeling.py  flash_distilbert_modeling.py  flash_exaone_modeling.py  flash_gemma2_modeling.py  flash_gemma_modeling.py  flash_gpt2_modeling.py  flash_granite_modeling.py  flash_llama_modeling.py  flash_mistral_modeling.py  flash_mixtral_modeling.py  flash_neox_modeling.py  flash_phi3_modeling.py  flash_phi_modeling.py  flash_qwen2_modeling.py  flash_qwen_modeling.py  flash_roberta_modeling.py  flash_rw_modeling.py  flash_santacoder_modeling.py  flash_solar_modeling.py  llava_next.py  mllama.py  mpt_modeling.py  neox_modeling.py  opt_modeling.py  siglip.py  t5_modeling.py  transformers_bert.py  utils.py  vlm.py
server/lorax_server/utils/: __init__.py  adapter.py  constants.py  convert.py  dist.py  embed_graph.py  errors.py  flash_attn.py  flash_attn_rocm.py  flash_attn_triton.py  flashinfer_attention.py  globals.py  graph.py  import_utils.py  layers.py  logits_process.py  lora.py  medusa.py  paged_attention.py  paged_attn.py  profiler.py  punica.py  segments.py  sgmv.py  state.py  token_classification.py  tokenizer.py  tokens.py  torch_utils.py  watermark.py  weights.py
server/lorax_server/utils/attention/: __init__.py  common.py  kv_cache.py  utils.py
server/lorax_server/utils/awq/: awq.py
server/lorax_server/utils/gptq/: custom_autotune.py  exllamav2.py  quant_linear.py  quantize.py
server/lorax_server/utils/marlin/: converter.py
server/lorax_server/utils/merges/: strategies.py  utils.py
server/marlin_kernels/: setup.py
server/marlin_kernels/marlin/: __init__.py
server/punica_kernels/: README.md  setup.py
server/punica_kernels/punica_kernels/: punica_ops.cc
server/tests/: conftest.py
server/tests/adapters/: test_medusa.py  test_utils.py
server/tests/models/: test_bloom.py  test_causal_lm.py  test_flash_causal_lm.py  test_model.py  test_santacoder.py  test_seq2seq_lm.py
server/tests/utils/: test_adapter.py  test_convert.py  test_hub.py  test_logits_process.py  test_lora.py  test_s3.py  test_segments.py  test_sgmv.py  test_tokens.py  test_watermark.py  test_weights.py
server/text_generation_server/: cli.py  server.py
server/text_generation_server/models/: __init__.py  cache_manager.py  causal_lm.py  flash_causal_lm.py  flash_llama.py  flash_mistral.py  model.py
server/text_generation_server/utils/: __init__.py  adapter.py  layers.py  lora.py  s3.py  weights.py
(+181 files in other folders)
