[package]
name = "lorax-router"
description = "LoRAX Webserver"
build = "build.rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "lorax-router"
path = "src/main.rs"

[dependencies]
async-stream = "0.3.3"
axum = { version = "0.7", features = ["json"] }
axum-tracing-opentelemetry = "0.16"
clap = { version = "4.1.4", features = ["derive", "env"] }
futures = "0.3.26"
hf-hub = { version = "0.3.0", features = ["tokio"] }
h2 = "0.3.26"
lorax-client = { path = "client" }
metrics = "0.21.0"
metrics-exporter-prometheus = { version = "0.12.1", features = [] }
nohash-hasher = "0.2.0"
opentelemetry = { version = "0.19.0", features = ["rt-tokio"] }
openssl = "0.10.66"
opentelemetry-otlp = "0.12.0"
rand = "0.8.5"
reqwest = { version = "0.11.14", features = ["blocking"] }
reqwest-middleware = "0.2.4"
reqwest-retry = "0.4.0"
regex = "1.5.4"
rustix = "0.37.25"
serde = "1.0.152"
serde_json = { version = "1.0.93", features = ["preserve_order"] }
slotmap = "1.0.7"
thiserror = "1.0.38"
tokenizers = { version = "0.20.0", features = ["http"] }
tokio = { version = "1.32.0", features = [
  "rt",
  "rt-multi-thread",
  "parking_lot",
  "signal",
  "sync",
] }
tokio-stream = "0.1.14"
tower-http = { version = "0.6.1", features = ["cors"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.19.0"
tracing-subscriber = { version = "0.3.16", features = ["json", "env-filter"] }
utoipa = { version = "4.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
ngrok = { version = "0.12.3", features = ["axum"], optional = true }
init-tracing-opentelemetry = { version = "0.14.1", features = [
  "opentelemetry-otlp",
] }
once_cell = "1.19.0"
itertools = "0.12.1"
async-trait = "0.1.80"
minijinja = { version = "2.2.0", features = ["json"] }
minijinja-contrib = { version = "2.0.2", features = ["pycompat"] }
image = "0.25.1"
rustls = "0.22.4"
webpki = "0.22.2"
base64 = "0.22.0"

[build-dependencies]
vergen = { version = "8.2.5", features = ["build", "git", "gitcl"] }

[dev-dependencies]
tracing-test = "0.1"

[features]
default = ["ngrok"]
ngrok = ["dep:ngrok"]
