[tool.poetry]
name = "lorax-client"
packages = [
    {include = "lorax"}
]
version = "0.2.1"
description = "LoRAX Python Client"
license = "Apache-2.0"
authors = ["Travis Addair <travis@predibase.com>", "Olivier Dehaene <olivier@huggingface.co>"]
maintainers = ["Travis Addair <travis@predibase.com>"]
readme = "README.md"
homepage = "https://github.com/predibase/lorax"
repository = "https://github.com/predibase/lorax"


[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.10"
aiohttp = "^3.8"
huggingface-hub = ">= 0.12, < 1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.17.2"
pytest-cov = "^3.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
