[package]
name = "lorax-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
futures = "^0.3"
grpc-metadata = { path = "../grpc-metadata" }
prost = "^0.11"
thiserror = "^1.0"
tokio = { version = "^1.25", features = ["sync"] }
tokenizers = { version = "0.19.1", features = ["http"] }
tonic = "^0.9"
tower = "^0.4"
tracing = "^0.1"
regex = "1.5.4"
anyhow = "1.0"

[build-dependencies]
tonic-build = "0.9.2"
prost-build = "0.11.6"
