[package]
name = "lorax-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
futures = "^0.3"
grpc-metadata = { path = "../grpc-metadata" }
prost = "^0.11"
thiserror = "^1.0"
tokio = { version = "^1.25", features = ["sync"] }
tokenizers = { version = "0.20.0", features = ["http"] }
tonic = "^0.9"
tower = "^0.4"
tracing = "^0.1"
regex = "1.5.4"
base64 = "0.22.0"
rustls = "0.22.4"
webpki = "0.22.2"

[build-dependencies]
tonic-build = "0.9.2"
prost-build = "0.11.6"
