[metadata]
name = aqlm
version = 1.0.0
author = AQLM paper authors
author_email = vahe527887@yandex.ru
description = Efficiently run models quantized with AQLM
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Vage1994/AQLM
project_urls =
    Bug Tracker = https://github.com/Vage1994/AQLM/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.10
[options.extras_require]
gpu =
    triton>=2.1
    ninja
cpu = 
    numba>=0.56.4
    scipy>=1.11.3
dev =
    pytest==6.2.5
    pytest-forked
    pytest-asyncio==0.16.0
    black==22.3.0
    isort==5.13.2
[options.packages.find]
where = src
